[metadata]
name = InvestmentToolkit
version = 0.0.1
author = Dan Philps
author_email = danphilps@hotmail.com
description = a toolkit to run investment simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danphilps/InvestmentToolkit/
project_urls =
    Bug Tracker = https://github.com/danphilps/InvestmentToolkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.21.6
    pandas>=1.3.5
    tqdm==4.64.1
    IPython==8.8.0
    matplotlib>=3.6.2,<=3.6.3
    seaborn==0.12
    scikit-learn>=1.2.0
    scipy>=1.9.0,<=1.10.0
    statsmodels==0.13.4
    investsai==0.0.10

[options.packages.find]
where = src
